# sql-interview

./: pyproject.toml  readme.md  requirements.txt
impl/: sql.py
tests/: test_sql.py
